--- a/spring-aop-analysis/pom.xml
+++ b/spring-aop-analysis/pom.xml
@@ -4,49 +4,45 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.iyang</groupId>
+    <parent>
+        <groupId>com.ruY9527</groupId>
+        <artifactId>spring-analysis</artifactId>
+        <version>${revision}</version>
+    </parent>
+
     <artifactId>spring-aop-analysis</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
-    <description>Spring 与 Aop 分析</description>
-
-
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
 
     <dependencies>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
-            <version>5.2.0.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>5.2.0.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>5.2.0.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aop</artifactId>
-            <version>5.2.0.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
-            <version>1.8.9</version>
+            <version>${aspectjweaver.version}</version>
         </dependency>
-
     </dependencies>
 
     <!--  指定 maven 使用 jdk1.8,因为普通的maven项目默认是使用的jdk1.5 -->
