--- a/spring-bean-analysis/pom.xml
+++ b/spring-bean-analysis/pom.xml
@@ -4,35 +4,32 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.iyang</groupId>
+    <parent>
+        <groupId>com.ruY9527</groupId>
+        <artifactId>spring-analysis</artifactId>
+        <version>${revision}</version>
+    </parent>
+
     <artifactId>spring-bean-analysis</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
-    <description>关于Spring的Bean一些知识</description>
-
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
-
 
     <dependencies>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
-            <version>5.2.0.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>5.2.0.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>5.2.0.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
 
     </dependencies>
