--- a/spring-inject-analysis/pom.xml
+++ b/spring-inject-analysis/pom.xml
@@ -4,34 +4,35 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.iyang</groupId>
-    <artifactId>spring-inject-analysis</artifactId>
-    <version>1.0-SNAPSHOT</version>
 
+    <parent>
+        <groupId>com.ruY9527</groupId>
+        <artifactId>spring-analysis</artifactId>
+        <version>${revision}</version>
+    </parent>
+
+    <artifactId>spring-inject-analysis</artifactId>
     <description>注入Bean等阅读和分析</description>
 
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
 
     <dependencies>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
-            <version>5.2.0.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>5.2.0.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>5.2.0.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
 
     </dependencies>
