--- a/spring-message-use-analysis/pom.xml
+++ b/spring-message-use-analysis/pom.xml
@@ -4,14 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.iyang</groupId>
+<!--    <groupId>com.iyang</groupId>
     <artifactId>spring-message-use-analysis</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>-->
 
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
+    <parent>
+        <groupId>com.ruY9527</groupId>
+        <artifactId>spring-analysis</artifactId>
+        <version>${revision}</version>
+    </parent>
 
+    <artifactId>spring-message-use-analysis</artifactId>
     <description>Spring-Message 使用 以及 阅读分析</description>
 
     <dependencies>
@@ -19,19 +22,19 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
-            <version>5.2.0.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>5.2.0.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>5.2.0.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
 
     </dependencies>
